# betscrap

./: Dockerfile  pyproject.toml
airflow/: docker-compose.yaml
airflow/dags/: winamax.py
airflow/dags/sql/: aaa.sql
notebooks/: 0tmp.ipynb  betclic.ipynb  selenium.ipynb  tmp.ipynb  unibet.ipynb  winamax.ipynb
src/dags/: dag_winamax.py  main.py  winamax.py
src/extract_data/: models.py  winamax.py
src/extract_data/models/: models.py
src/retreive_data/: models.py  winamax.py
tmp/: Untitled.ipynb  Untitled.py
winamax/: scrapy.cfg
winamax/winamax/: items.py  middlewares.py  pipelines.py  settings.py
winamax/winamax/spiders/: winamax_spider.py
