[tool.poetry]
name = "betscrap"
version = "0.1.0"
description = ""
authors = ["Alexandre DUHAMEL"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "2.1.4"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.6.1"
pyarrow = "^15.0.0"
apache-airflow-providers-postgres = "^5.10.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
